Fixed nav bar spacing and padding

--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,7 @@ textarea {
      display: flex;
      justify-content: space-around;
      width: 100%;
+     padding: 0;
    }
 
    header nav ul li {
